add user and message reference

--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -10,7 +10,7 @@
 <div id="messages">
     <% @chat_room.messages.each do |message| %>
         <div class="message">
-            <%= message.message %>
+           <%= message.user.email %> says:  <%= message.message %>
         </div>
     <% end %>
 </div>
